# astroscripts

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  archive_sources.sh  bulk_edit_fits_headers.py  bulk_edit_fits_headers.sh  fits_header.py  fits_header.sh  import_from_asiair.sh  pyproject.toml  requirements.txt  session_report.sh  statistics.sh
examples/: AcquisitionDetails.csv  ImageMetaData.csv  WeatherData.csv
python/: archive_sources.py  bulk_edit_fits_headers.py  fits_header.py  session_report.py  statistics.py
