[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroscripts"
version = "0.1.0"
description = "Python-based astrophotography utilities for processing FITS files"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Otto", email = "otto@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=5.1,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.991",
    "isort>=5.10",
]

[project.urls]
Homepage = "https://github.com/otto/astroscripts"
Repository = "https://github.com/otto/astroscripts"
Issues = "https://github.com/otto/astroscripts/issues"

[project.scripts]
bulk-edit-fits-headers = "astroscripts.bulk_edit_fits_headers:main"
fits-header = "astroscripts.fits_header:main"
import-from-asiair = "astroscripts.archive_sources:main"
statistics = "astroscripts.statistics:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
astroscripts = "python"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
